Fixed: word wrap on posts

--- a/style/scss/_components/_post.scss
+++ b/style/scss/_components/_post.scss
@@ -5,6 +5,7 @@
 }
 
 .post {
+  word-wrap: break-word;
   background-color: var(--bg-element);
   display: flex;
   flex-direction: column;
